--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "test-ui": "vitest --ui",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,6 +18,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
-    "vite": "^3.0.0"
+    "@vitest/ui": "^0.22.0",
+    "vite": "^3.0.0",
+    "vitest": "^0.22.0"
   }
 }
