--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.2.17",
     "naive-ui": "^2.32.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/node": "^18.8.4",
     "@vitejs/plugin-vue": "^3.0.0",
     "@vitest/ui": "^0.22.0",
+    "sass": "^1.55.0",
+    "typescript": "^4.8.4",
     "vite": "^3.0.0",
     "vitest": "^0.22.0"
   }
