--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "element-plus": "^2.2.17",
     "naive-ui": "^2.32.1",
+    "pinia": "^2.0.23",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
