--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "test-ui": "vitest --ui",
-    "build": "vite build",
+    "build": "cross-env CI=true run-p type-check && vite build",
+    "build:rc": "cross-env CI=true run-p type-check && vite build --mode rc",
+    "build:qa": "cross-env CI=true run-p type-check && vite build --mode qa",
+    "build:prod": "cross-env CI=true run-p type-check && vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "element-plus": "^2.2.17",
     "naive-ui": "^2.32.1",
     "pinia": "^2.0.23",
